# B_cell_epitope_prediction

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: targets.yaml
notebooks/: analysis.ipynb  epitope_analysis.ipynb
scripts/: combine.py  fetch_pdbs.py  predict.py  report.py  run_pipeline.py  split_pdb.py  split_pdb_target_chain.py
src/epitope_pipeline/: config.py
src/epitope_pipeline/integration/: combine.py
src/epitope_pipeline/predictors/: bepipred.py  discotope.py  graphbepi.py
src/epitope_pipeline/reporting/: notebook.py  plots.py  report.py  tables.py
